@@ -560,13 +560,21 @@ class CHost extends CHostGeneral {
 				self::exception();
 			}
 
-			if (!empty($host['inventory'])) {
+			if (array_key_exists('inventory', $host) && $host['inventory']) {
 				$hostInventory = $host['inventory'];
 				$hostInventory['hostid'] = $hostid;
-				$hostInventory['inventory_mode'] = isset($host['inventory_mode'])
-					? $host['inventory_mode']
-					: HOST_INVENTORY_MANUAL;
+				$hostInventory['inventory_mode'] = HOST_INVENTORY_MANUAL;
+			}
+			else {
+				$hostInventory = [];
+			}
 
+			if (array_key_exists('inventory_mode', $host) && $host['inventory_mode'] != HOST_INVENTORY_DISABLED) {
+				$hostInventory['hostid'] = $hostid;
+				$hostInventory['inventory_mode'] = $host['inventory_mode'];
+			}
+
+			if ($hostInventory) {
 				DB::insert('host_inventory', [$hostInventory], false);
 			}
 		}
