@@ -39,7 +39,7 @@ class CItemPrototype extends CItemGeneral {
 	}
 
 	/**
-	 * Get Itemprototype data.
+	 * Get ItemPrototype data.
 	 */
 	public function get($options = []) {
 		$result = [];
@@ -675,7 +675,7 @@ class CItemPrototype extends CItemGeneral {
 	}
 
 	/**
-	 * Update Itemprototype.
+	 * Update ItemPrototype.
 	 *
 	 * @param array $items
 	 *
